Cancel the timeout in SubKeyRequest destructor.

This could avoid a potential crash.

Bug: 741054
Change-Id: I7f606d0edc3741b05b73f678f7a2e28c343852f4
Reviewed-on: https://chromium-review.googlesource.com/567463
Reviewed-by: Mathieu Perreault <mathp@chromium.org>
Commit-Queue: Mathieu Perreault <mathp@chromium.org>
Cr-Commit-Position: refs/heads/master@{#485934}