components/payments/core/subkey_requester.cc
@@ -46,7 +46,7 @@ class SubKeyRequest : public SubKeyRequester::Request {
         base::TimeDelta::FromSeconds(timeout_seconds));
   }
 
-  ~SubKeyRequest() override {}
+  ~SubKeyRequest() override { on_timeout_.Cancel(); }
 
   void OnRulesLoaded() override {
     on_timeout_.Cancel();
